etcdctl: add livez and readyz command for etcdctl.
This is part of the effort to add two separate probes, one for liveness and one for readiness, to make etcd health-check fully Kubernetes API complient.
